# crow-agent

./: .env.example  .gitattributes  .gitignore  .graphifyignore  CONTRIBUTING.md  DEV_GUIDE.md  LICENSE  README.md  app.py  install.sh  pyproject.toml  requirements.txt  test_agent_e2e.py  test_providers.py
crow_agent/: __init__.py  __main__.py  agent_profiles.py  auto_builder.py  config_check.py  context_assembler.py  context_sources.py  crew.py  cron_engine.py  crow_state.py  db_schema.md  embeddings.py  error_tracker.py  failure_classifier.py  file_safety.py  foreman.py  heartbeat_engine.py  holidays_my.json  memory_tracker.py  model_tools.py  output_compressor.py  paths.py  prompt_builder.py  provider_manager.py  providers.py  reminder_engine.py  run_agent.py  scratchpad.py  self_model.py  sensors.py  skills_system.py  task_registry.py  telegram_bot.py  telegram_rich.py  tool_executor.py  tools_agent.py  tools_common.py  tools_comms.py  tools_cron.py  tools_file.py  (+13 more)
docs/: architecture.html  flow.html
extensions/: __init__.py
scripts/: update_holidays.py
skills/: auto-builder.skill.md  caveman.md  codegraph.md  control.md  deep-research.md  develop-and-deploy-skill.md  diagnose.md  fulldev.md  generate-item-history.md  graphify.md  grill-me.md  grill-with-docs.md  improve-architecture.md  iterative-script-analysis.md  iterative-web-research.md  methodology.md  po-price-adjust.md  proactive-procurement.md  procurement-monitoring.md  procurement-process.md  procurement-research-and-rfq.md  procurement-rfq-generation.md  remote-procurement-audit.md  repo-health.md  (+3 more)
(+66 files in other folders)
